--- a/HelloWorld/src/app/home/home.component.html
+++ b/HelloWorld/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 
 <GridLayout>
     <!-- Add your page content here -->
-    <Label text="Home2 {{test}}"></Label>
+    <Label text="Home2 {{test}} 1111!!!!!!!!!!!!!!!!" (tap)="speak('Whatever you like')"></Label>
 
 <!-- <AbsoluteLayout width="210" height="210" backgroundColor="lightgray">
     <Label text="10, 10" left="10" top="10" width="90" height="90" backgroundColor="red"></Label>
