--- a/HelloWorld/src/app/test/test.component.html
+++ b/HelloWorld/src/app/test/test.component.html
@@ -4,7 +4,7 @@
 
 <DockLayout stretchLastChild="true">
 
-    <ns-nav></ns-nav>
+    <ns-nav [collapse]="navCollapse"></ns-nav>
 
     <!-- <Button dock="left" text="left" style="background-color: #0099CC; margin: 5; height: 100%;"></Button> -->
     <Button dock="right" text="right" style="background-color: #8C489F; margin: 5;"></Button>
@@ -18,9 +18,9 @@
 
 
 <!-- <GridLayout> -->
-    <!-- Add your page content here -->
-    <!-- <Label text="TEST 123 {{test}} 1111!!!!!!!!!!!!!!!!" (tap)="speak('Whatever you like')"></Label> -->
-    
+<!-- Add your page content here -->
+<!-- <Label text="TEST 123 {{test}} 1111!!!!!!!!!!!!!!!!" (tap)="speak('Whatever you like')"></Label> -->
+
 
 <!-- <AbsoluteLayout width="210" height="210" backgroundColor="lightgray">
     <Label text="10, 10" left="10" top="10" width="90" height="90" backgroundColor="red"></Label>
