--- a/HelloWorld/src/app.css
+++ b/HelloWorld/src/app.css
@@ -3,3 +3,37 @@
 
 /* Place any CSS rules you want to apply on both iOS and Android here.
 This is where the vast majority of your CSS code goes. */
+
+@keyframes example {
+    from {
+        background-color: red;
+        height: 300px;
+    }
+    to {
+        background-color: green;
+        height: 100px;
+    }
+}
+
+@keyframes example2 {
+    from {
+        background-color: green;
+        height: 100px;
+    }
+    to {
+        background-color: red;
+        height: 300px;
+    }
+}
+
+.view {
+    animation-name: example;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
+
+.view2 {
+    animation-name: example2;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
+}
