--- a/HelloWorld/src/app/parts/nav/nav.component.html
+++ b/HelloWorld/src/app/parts/nav/nav.component.html
@@ -1,4 +1,4 @@
-<FlexboxLayout flexDirection="column" style="width: 30%;" backgroundColor="#999999" dock="left">
+<FlexboxLayout flexDirection="column" [class]="(collapse) ? 'collapsed' : 'open' " backgroundColor="#999999" dock="left">
     <!-- Use even flexGrow to achieve uniform grid -->
     <!-- <Button flexGrow="1" text="To HOME >>>" style="margin: 0; padding:0;" [nsRouterLink]="['/home']" pageTransition="slide" clearHistory="true"></Button> -->
     <Label flexGrow="1" class="p-15 text-center font-weight-bold" text="Home" [nsRouterLink]="['/home']" pageTransition="slide" backgroundColor="#EEEEEE"></Label>
@@ -8,5 +8,5 @@
     <Label flexGrow="1" class="p-15 text-center font-weight-bold" text="3" backgroundColor="#CCCCCC"></Label>
     <Label flexGrow="1" class="p-15 text-center font-weight-bold" text="4" backgroundColor="#BBBBBB"></Label>
     <Label flexGrow="1" class="p-15 text-center font-weight-bold" text="5" backgroundColor="#AAAAAA"></Label>
-    <Label flexGrow="1" class="p-15 text-center font-weight-bold" text="6" backgroundColor="#999999"></Label>
+    <Label flexGrow="1" class="p-15 text-center font-weight-bold" text="{{collapse}}" backgroundColor="#999999"></Label>
 </FlexboxLayout>
